# Culinary-Canvas

./: README.md  answers.txt  pyproject.toml
categories/: admin.py  models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py
core/: celery.py  jazzmin_conf.py  settings.py  urls.py
dishes/: admin.py  apps.py  filters.py  models.py  serializers.py  signals.py  tasks.py  translation.py  urls.py  views.py
dishes/management/commands/: publish_old_drafts.py  recipe_stats.py
dishes/migrations/: 0001_initial.py
static/css/: style.css
templates/: home.html
users/: admin.py  managers.py  models.py  redis_helper.py  serializers.py  tasks.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_managers.py
